test/semantics/programs/valid/for-in-valid-condition.fav
arr = [1, 2, 3]
y = 0
for a in arr {
    y += arr[a] 
}
