test/semantics/programs/invalid/for-in-invalid-condition.fav
arr = 8
y = 0
for a in arr {
    y += arr[a] 
}
